added keras dataset download

--- a/FDL_CS6910_Assigment_1.ipynb
+++ b/FDL_CS6910_Assigment_1.ipynb
@@ -415,6 +415,7 @@
         }
       ],
       "source": [
+        "(x_train, y_train), (x_test, y_test) = fashion_mnist.load_data()\n",
         "one_hot_label = np.zeros([y_train.shape[0], len(np.unique(y_train))], dtype=int)\n",
         "for index, item in enumerate(y_train):\n",
         "  one_hot_label[index, item] = 1\n",
